# flash-algorithms

./: .gitignore  .gitmodules  Cargo.toml  README.md  chips.yaml
.github/workflows/: ci.yml
algos/common/: Cargo.toml
algos/common/src/: lib.rs
algos/f1/: Cargo.toml
algos/f1/.cargo/: config.toml
algos/f1/src/: lib.rs
algos/h4/: Cargo.toml
algos/h4/.cargo/: config.toml
algos/h4/src/: lib.rs
algos/l1/: Cargo.toml
algos/l1/src/: lib.rs
algos/v0/: Cargo.toml  build.rs
algos/v0/.cargo/: config.toml
algos/v0/src/: lib.rs
algos/v00x/: Cargo.toml
algos/v00x/.cargo/: config.toml
algos/v00x/src/: lib.rs
algos/v1/: Cargo.toml
algos/v1/.cargo/: config.toml
algos/v1/src/: lib.rs
algos/v3/: Cargo.toml
algos/v3/src/: lib.rs
algos/x0/: Cargo.toml
algos/x0/src/: lib.rs
build-helper/: Cargo.toml
build-helper/src/: lib.rs
ch32v003/: Cargo.toml  template.yaml
ch32v003/.cargo/: config.toml
ch32v003/src/: main.rs
ch32v307/: Cargo.toml  template.yaml
ch32v307/.cargo/: config.toml
ch32v307/src/: main.rs
targets/: riscv32ec-unknown-none-elf.json  riscv32ec_zmmul-unknown-none-elf.json
xtask/: Cargo.toml
xtask/src/: algo.rs  chip.rs  main.rs  render.rs
