[workspace]
resolver = "2"
# xtask is standalone (own [workspace] block); see xtask/Cargo.toml.
members = ["algos/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ch32-rs/flash-algorithms"
authors = [
    "Andelf <andelf@gmail.com>",
    "Aaron Qian <aq1018@gmail.com>",
]

[workspace.dependencies]
# ch32-metapac is built locally from the ch32-data submodule and pulled in per-crate
# via an inline path dep; not declared here so xtask runs on a fresh clone.
flash-algorithm = { version = "0.7", default-features = false, features = ["erase-chip", "panic-handler"] }
panic-halt = "1"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
