[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ch32-rs/flash-algorithms"
authors = [
    "Andelf <andelf@gmail.com>",
    "Aaron Qian <aq1018@gmail.com>",
]
publish = false

# Standalone — included so `cargo run --manifest-path xtask/Cargo.toml` works on a
# fresh clone, before the algos' generated path dep exists.
[workspace]

[dependencies]
anyhow = "1"
goblin = "0.10"
indexmap = "2"
probe-rs-target = { git = "https://github.com/ch32-rs/probe-rs", rev = "8bfc5b87e356934ef0af6ad3ee8f3f6162089327" }
scroll = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
