[package]
name = "flash-algo-h4"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
name = "flash_algo_h4"

[[bin]]
name = "usr"
test = false
doctest = false
bench = false

[[bin]]
name = "sys"
test = false
doctest = false
bench = false

[[bin]]
name = "ob"
test = false
doctest = false
bench = false

[dependencies]
ch32-metapac = { path = "../../ch32-data/build/ch32-metapac", default-features = false, features = ["pac", "ch32h417meu6-qingke-v3f"] }
flash-algorithm = { workspace = true }
flash-algo-common = { path = "../common" }
