[package]
name = "flash-algo-x0"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
name = "flash_algo_x0"

[[bin]]
name = "usr"
test = false
doctest = false
bench = false

[[bin]]
name = "sys"
test = false
doctest = false
bench = false

[[bin]]
name = "ob"
test = false
doctest = false
bench = false

[dependencies]
ch32-metapac = { workspace = true, features = ["pac", "ch32x035r8t6"] }
flash-algorithm = { workspace = true }
flash-algo-common = { path = "../common" }
